// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders differently after changed properties should have been called in the beginning 1`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={Object {}}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileHeight={100}
/>
`;

exports[`renders differently after changed properties should have been called in the beginning 2`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={Object {}}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileHeight={100}
>
  <withPosition(YBarComponent)
    cacheElements={2}
    componentCache={[Function]}
    height={200}
    nrYTiles={7}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileComponent={[Function]}
    tileHeight={100}
  >
    <YBarComponent
      cacheElements={2}
      componentCache={[Function]}
      height={200}
      nrYTiles={7}
      position={
        Object {
          "currentViewSequence": 0,
          "currentViewSequencePosition": 10,
          "lastCurrentViewSequence": 0,
          "lastStartYTile": 0,
          "xPos": 0,
          "xPosOffset": 0,
          "yPos": 0,
          "yPosOffset": 0,
        }
      }
      positionDispatch={[Function]}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={100}
    >
      <div>
        <div
          style={
            Object {
              "height": 200,
              "overflow": "hidden",
              "position": "relative",
              "whiteSpace": "nowrap",
            }
          }
        >
          <ListComponent
            componentCache={[Function]}
            endTile={6}
            startTile={0}
            tileComponent={[Function]}
          >
            <div>
              <Label
                index={0}
                key="0"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 1
                </div>
              </Label>
              <Label
                index={1}
                key="1"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 2
                </div>
              </Label>
              <Label
                index={2}
                key="2"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 3
                </div>
              </Label>
              <Label
                index={3}
                key="3"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 4
                </div>
              </Label>
              <Label
                index={4}
                key="4"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 5
                </div>
              </Label>
              <Label
                index={5}
                key="5"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 6
                </div>
              </Label>
            </div>
          </ListComponent>
        </div>
      </div>
    </YBarComponent>
  </withPosition(YBarComponent)>
</HTMLLabelsComponent>
`;

exports[`renders differently after changed properties should refresh on property changes 1`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={Object {}}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileHeight={100}
/>
`;

exports[`renders differently after changed properties should refresh on property changes 2`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={Object {}}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileHeight={100}
>
  <withPosition(YBarComponent)
    cacheElements={2}
    componentCache={[Function]}
    height={200}
    nrYTiles={7}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileComponent={[Function]}
    tileHeight={100}
  >
    <YBarComponent
      cacheElements={2}
      componentCache={[Function]}
      height={200}
      nrYTiles={7}
      position={
        Object {
          "currentViewSequence": 0,
          "currentViewSequencePosition": 10,
          "lastCurrentViewSequence": 0,
          "lastStartYTile": 0,
          "xPos": 0,
          "xPosOffset": 0,
          "yPos": 0,
          "yPosOffset": 0,
        }
      }
      positionDispatch={[Function]}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={100}
    >
      <div>
        <div
          style={
            Object {
              "height": 200,
              "overflow": "hidden",
              "position": "relative",
              "whiteSpace": "nowrap",
            }
          }
        >
          <ListComponent
            componentCache={[Function]}
            endTile={6}
            startTile={0}
            tileComponent={[Function]}
          >
            <div>
              <Label
                index={0}
                key="0"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 1
                </div>
              </Label>
              <Label
                index={1}
                key="1"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 2
                </div>
              </Label>
              <Label
                index={2}
                key="2"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 3
                </div>
              </Label>
              <Label
                index={3}
                key="3"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 4
                </div>
              </Label>
              <Label
                index={4}
                key="4"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 5
                </div>
              </Label>
              <Label
                index={5}
                key="5"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 6
                </div>
              </Label>
            </div>
          </ListComponent>
        </div>
      </div>
    </YBarComponent>
  </withPosition(YBarComponent)>
</HTMLLabelsComponent>
`;

exports[`renders differently after changed properties should refresh on property changes 3`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={
    Object {
      "color": "red",
    }
  }
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileHeight={100}
>
  <withPosition(YBarComponent)
    cacheElements={2}
    componentCache={[Function]}
    height={200}
    nrYTiles={7}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileComponent={[Function]}
    tileHeight={100}
  >
    <YBarComponent
      cacheElements={2}
      componentCache={[Function]}
      height={200}
      nrYTiles={7}
      position={
        Object {
          "currentViewSequence": 0,
          "currentViewSequencePosition": 10,
          "lastCurrentViewSequence": 0,
          "lastStartYTile": 0,
          "xPos": 0,
          "xPosOffset": 0,
          "yPos": 0,
          "yPosOffset": 0,
        }
      }
      positionDispatch={[Function]}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={100}
    >
      <div>
        <div
          style={
            Object {
              "height": 200,
              "overflow": "hidden",
              "position": "relative",
              "whiteSpace": "nowrap",
            }
          }
        >
          <ListComponent
            componentCache={[Function]}
            endTile={6}
            startTile={0}
            tileComponent={[Function]}
          >
            <div>
              <Label
                index={0}
                key="0"
              >
                <div
                  style={
                    Object {
                      "color": "red",
                      "height": 100,
                    }
                  }
                >
                  sequence 1
                </div>
              </Label>
              <Label
                index={1}
                key="1"
              >
                <div
                  style={
                    Object {
                      "color": "red",
                      "height": 100,
                    }
                  }
                >
                  sequence 2
                </div>
              </Label>
              <Label
                index={2}
                key="2"
              >
                <div
                  style={
                    Object {
                      "color": "red",
                      "height": 100,
                    }
                  }
                >
                  sequence 3
                </div>
              </Label>
              <Label
                index={3}
                key="3"
              >
                <div
                  style={
                    Object {
                      "color": "red",
                      "height": 100,
                    }
                  }
                >
                  sequence 4
                </div>
              </Label>
              <Label
                index={4}
                key="4"
              >
                <div
                  style={
                    Object {
                      "color": "red",
                      "height": 100,
                    }
                  }
                >
                  sequence 5
                </div>
              </Label>
              <Label
                index={5}
                key="5"
              >
                <div
                  style={
                    Object {
                      "color": "red",
                      "height": 100,
                    }
                  }
                >
                  sequence 6
                </div>
              </Label>
            </div>
          </ListComponent>
        </div>
      </div>
    </YBarComponent>
  </withPosition(YBarComponent)>
</HTMLLabelsComponent>
`;

exports[`renders differently after changed properties should rerender if sequences have changed 1`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={Object {}}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileHeight={100}
/>
`;

exports[`renders differently after changed properties should rerender if sequences have changed 2`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={Object {}}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileHeight={100}
>
  <withPosition(YBarComponent)
    cacheElements={2}
    componentCache={[Function]}
    height={200}
    nrYTiles={7}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileComponent={[Function]}
    tileHeight={100}
  >
    <YBarComponent
      cacheElements={2}
      componentCache={[Function]}
      height={200}
      nrYTiles={7}
      position={
        Object {
          "currentViewSequence": 0,
          "currentViewSequencePosition": 10,
          "lastCurrentViewSequence": 0,
          "lastStartYTile": 0,
          "xPos": 0,
          "xPosOffset": 0,
          "yPos": 0,
          "yPosOffset": 0,
        }
      }
      positionDispatch={[Function]}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={100}
    >
      <div>
        <div
          style={
            Object {
              "height": 200,
              "overflow": "hidden",
              "position": "relative",
              "whiteSpace": "nowrap",
            }
          }
        >
          <ListComponent
            componentCache={[Function]}
            endTile={6}
            startTile={0}
            tileComponent={[Function]}
          >
            <div>
              <Label
                index={0}
                key="0"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 1
                </div>
              </Label>
              <Label
                index={1}
                key="1"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 2
                </div>
              </Label>
              <Label
                index={2}
                key="2"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 3
                </div>
              </Label>
              <Label
                index={3}
                key="3"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 4
                </div>
              </Label>
              <Label
                index={4}
                key="4"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 5
                </div>
              </Label>
              <Label
                index={5}
                key="5"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 6
                </div>
              </Label>
            </div>
          </ListComponent>
        </div>
      </div>
    </YBarComponent>
  </withPosition(YBarComponent)>
</HTMLLabelsComponent>
`;

exports[`renders differently after changed properties should rerender if sequences have changed 3`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={Object {}}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "seq.1",
        "sequence": "AAAAAAAAAAAAAAAAAAAA",
      },
      Object {
        "name": "seq.1",
        "sequence": "AAAAAAAAAAAAAAAAAAAA",
      },
      Object {
        "name": "seq.3",
        "sequence": "AAAAAAAAAAAAAAAAAAAA",
      },
    ]
  }
  tileHeight={100}
>
  <withPosition(YBarComponent)
    cacheElements={2}
    componentCache={[Function]}
    height={200}
    nrYTiles={7}
    sequences={
      Array [
        Object {
          "name": "seq.1",
          "sequence": "AAAAAAAAAAAAAAAAAAAA",
        },
        Object {
          "name": "seq.1",
          "sequence": "AAAAAAAAAAAAAAAAAAAA",
        },
        Object {
          "name": "seq.3",
          "sequence": "AAAAAAAAAAAAAAAAAAAA",
        },
      ]
    }
    tileComponent={[Function]}
    tileHeight={100}
  >
    <YBarComponent
      cacheElements={2}
      componentCache={[Function]}
      height={200}
      nrYTiles={7}
      position={
        Object {
          "currentViewSequence": 0,
          "currentViewSequencePosition": 10,
          "lastCurrentViewSequence": 0,
          "lastStartYTile": 0,
          "xPos": 0,
          "xPosOffset": 0,
          "yPos": 0,
          "yPosOffset": 0,
        }
      }
      positionDispatch={[Function]}
      sequences={
        Array [
          Object {
            "name": "seq.1",
            "sequence": "AAAAAAAAAAAAAAAAAAAA",
          },
          Object {
            "name": "seq.1",
            "sequence": "AAAAAAAAAAAAAAAAAAAA",
          },
          Object {
            "name": "seq.3",
            "sequence": "AAAAAAAAAAAAAAAAAAAA",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={100}
    >
      <div>
        <div
          style={
            Object {
              "height": 200,
              "overflow": "hidden",
              "position": "relative",
              "whiteSpace": "nowrap",
            }
          }
        >
          <ListComponent
            componentCache={[Function]}
            endTile={3}
            startTile={0}
            tileComponent={[Function]}
          >
            <div>
              <Label
                index={0}
                key="0"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  seq.1
                </div>
              </Label>
              <Label
                index={1}
                key="1"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  seq.1
                </div>
              </Label>
              <Label
                index={2}
                key="2"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  seq.3
                </div>
              </Label>
            </div>
          </ListComponent>
        </div>
      </div>
    </YBarComponent>
  </withPosition(YBarComponent)>
</HTMLLabelsComponent>
`;

exports[`renders differently after changed properties shouldn't refresh on unrelated property changes 1`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={Object {}}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileHeight={100}
/>
`;

exports[`renders differently after changed properties shouldn't refresh on unrelated property changes 2`] = `
<HTMLLabelsComponent
  cacheElements={2}
  height={200}
  labelStyle={Object {}}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileHeight={100}
>
  <withPosition(YBarComponent)
    cacheElements={2}
    componentCache={[Function]}
    height={200}
    nrYTiles={7}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileComponent={[Function]}
    tileHeight={100}
  >
    <YBarComponent
      cacheElements={2}
      componentCache={[Function]}
      height={200}
      nrYTiles={7}
      position={
        Object {
          "currentViewSequence": 0,
          "currentViewSequencePosition": 10,
          "lastCurrentViewSequence": 0,
          "lastStartYTile": 0,
          "xPos": 0,
          "xPosOffset": 0,
          "yPos": 0,
          "yPosOffset": 0,
        }
      }
      positionDispatch={[Function]}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={100}
    >
      <div>
        <div
          style={
            Object {
              "height": 200,
              "overflow": "hidden",
              "position": "relative",
              "whiteSpace": "nowrap",
            }
          }
        >
          <ListComponent
            componentCache={[Function]}
            endTile={6}
            startTile={0}
            tileComponent={[Function]}
          >
            <div>
              <Label
                index={0}
                key="0"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 1
                </div>
              </Label>
              <Label
                index={1}
                key="1"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 2
                </div>
              </Label>
              <Label
                index={2}
                key="2"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 3
                </div>
              </Label>
              <Label
                index={3}
                key="3"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 4
                </div>
              </Label>
              <Label
                index={4}
                key="4"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 5
                </div>
              </Label>
              <Label
                index={5}
                key="5"
              >
                <div
                  style={
                    Object {
                      "height": 100,
                    }
                  }
                >
                  sequence 6
                </div>
              </Label>
            </div>
          </ListComponent>
        </div>
      </div>
    </YBarComponent>
  </withPosition(YBarComponent)>
</HTMLLabelsComponent>
`;

exports[`renders properly 1`] = `
<FakePositionStore
  currentViewSequence={0}
  currentViewSequencePosition={0}
  position={
    Object {
      "xPos": 0,
      "yPos": 0,
    }
  }
  subscribe={[Function]}
  xPosOffset={0}
  yPosOffset={0}
>
  <HTMLLabelsComponent
    cacheElements={10}
    height={400}
    labelStyle={Object {}}
    nrYTiles={10}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileHeight={40}
  >
    <withPosition(YBarComponent)
      cacheElements={10}
      componentCache={[Function]}
      height={400}
      nrYTiles={10}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={40}
    >
      <YBarComponent
        cacheElements={10}
        componentCache={[Function]}
        height={400}
        nrYTiles={10}
        position={
          Object {
            "currentViewSequence": 0,
            "currentViewSequencePosition": 0,
            "lastCurrentViewSequence": 0,
            "lastStartYTile": 0,
            "xPos": 0,
            "xPosOffset": 0,
            "yPos": 0,
            "yPosOffset": 0,
          }
        }
        positionDispatch={[Function]}
        sequences={
          Array [
            Object {
              "name": "sequence 1",
              "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
            },
            Object {
              "name": "sequence 2",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 3",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 4",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 5",
              "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 6",
              "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 7",
              "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
            },
          ]
        }
        tileComponent={[Function]}
        tileHeight={40}
      >
        <div>
          <div
            style={
              Object {
                "height": 400,
                "overflow": "hidden",
                "position": "relative",
                "whiteSpace": "nowrap",
              }
            }
          >
            <ListComponent
              componentCache={[Function]}
              endTile={7}
              startTile={0}
              tileComponent={[Function]}
            >
              <div>
                <Label
                  index={0}
                  key="0"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 1
                  </div>
                </Label>
                <Label
                  index={1}
                  key="1"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 2
                  </div>
                </Label>
                <Label
                  index={2}
                  key="2"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 3
                  </div>
                </Label>
                <Label
                  index={3}
                  key="3"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 4
                  </div>
                </Label>
                <Label
                  index={4}
                  key="4"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 5
                  </div>
                </Label>
                <Label
                  index={5}
                  key="5"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 6
                  </div>
                </Label>
                <Label
                  index={6}
                  key="6"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 7
                  </div>
                </Label>
              </div>
            </ListComponent>
          </div>
        </div>
      </YBarComponent>
    </withPosition(YBarComponent)>
  </HTMLLabelsComponent>
</FakePositionStore>
`;

exports[`renders properly when only 3 1/2 labels should be visible 1`] = `
<FakePositionStore
  currentViewSequence={0}
  currentViewSequencePosition={0}
  position={
    Object {
      "xPos": 0,
      "yPos": 0,
    }
  }
  subscribe={[Function]}
  xPosOffset={0}
  yPosOffset={-50}
>
  <HTMLLabelsComponent
    cacheElements={10}
    height={400}
    labelStyle={Object {}}
    nrYTiles={10}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileHeight={100}
  >
    <withPosition(YBarComponent)
      cacheElements={10}
      componentCache={[Function]}
      height={400}
      nrYTiles={10}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={100}
    >
      <YBarComponent
        cacheElements={10}
        componentCache={[Function]}
        height={400}
        nrYTiles={10}
        position={
          Object {
            "currentViewSequence": 0,
            "currentViewSequencePosition": 0,
            "lastCurrentViewSequence": 0,
            "lastStartYTile": 0,
            "xPos": 0,
            "xPosOffset": 0,
            "yPos": 0,
            "yPosOffset": -50,
          }
        }
        positionDispatch={[Function]}
        sequences={
          Array [
            Object {
              "name": "sequence 1",
              "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
            },
            Object {
              "name": "sequence 2",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 3",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 4",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 5",
              "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 6",
              "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 7",
              "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
            },
          ]
        }
        tileComponent={[Function]}
        tileHeight={100}
      >
        <div>
          <div
            style={
              Object {
                "height": 400,
                "overflow": "hidden",
                "position": "relative",
                "whiteSpace": "nowrap",
              }
            }
          >
            <ListComponent
              componentCache={[Function]}
              endTile={7}
              startTile={0}
              tileComponent={[Function]}
            >
              <div>
                <Label
                  index={0}
                  key="0"
                >
                  <div
                    style={
                      Object {
                        "height": 100,
                      }
                    }
                  >
                    sequence 1
                  </div>
                </Label>
                <Label
                  index={1}
                  key="1"
                >
                  <div
                    style={
                      Object {
                        "height": 100,
                      }
                    }
                  >
                    sequence 2
                  </div>
                </Label>
                <Label
                  index={2}
                  key="2"
                >
                  <div
                    style={
                      Object {
                        "height": 100,
                      }
                    }
                  >
                    sequence 3
                  </div>
                </Label>
                <Label
                  index={3}
                  key="3"
                >
                  <div
                    style={
                      Object {
                        "height": 100,
                      }
                    }
                  >
                    sequence 4
                  </div>
                </Label>
                <Label
                  index={4}
                  key="4"
                >
                  <div
                    style={
                      Object {
                        "height": 100,
                      }
                    }
                  >
                    sequence 5
                  </div>
                </Label>
                <Label
                  index={5}
                  key="5"
                >
                  <div
                    style={
                      Object {
                        "height": 100,
                      }
                    }
                  >
                    sequence 6
                  </div>
                </Label>
                <Label
                  index={6}
                  key="6"
                >
                  <div
                    style={
                      Object {
                        "height": 100,
                      }
                    }
                  >
                    sequence 7
                  </div>
                </Label>
              </div>
            </ListComponent>
          </div>
        </div>
      </YBarComponent>
    </withPosition(YBarComponent)>
  </HTMLLabelsComponent>
</FakePositionStore>
`;

exports[`renders properly with a moved viewport (provider version) 1`] = `
<FakePositionStore
  currentViewSequence={3}
  currentViewSequencePosition={0}
  position={
    Object {
      "xPos": 0,
      "yPos": 0,
    }
  }
  subscribe={[Function]}
  xPosOffset={0}
  yPosOffset={0}
>
  <HTMLLabelsComponent
    cacheElements={2}
    height={100}
    labelStyle={Object {}}
    nrYTiles={7}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileHeight={50}
  >
    <withPosition(YBarComponent)
      cacheElements={2}
      componentCache={[Function]}
      height={100}
      nrYTiles={7}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={50}
    >
      <YBarComponent
        cacheElements={2}
        componentCache={[Function]}
        height={100}
        nrYTiles={7}
        position={
          Object {
            "currentViewSequence": 3,
            "currentViewSequencePosition": 0,
            "lastCurrentViewSequence": 3,
            "lastStartYTile": 1,
            "xPos": 0,
            "xPosOffset": 0,
            "yPos": 0,
            "yPosOffset": 0,
          }
        }
        positionDispatch={[Function]}
        sequences={
          Array [
            Object {
              "name": "sequence 1",
              "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
            },
            Object {
              "name": "sequence 2",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 3",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 4",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 5",
              "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 6",
              "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 7",
              "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
            },
          ]
        }
        tileComponent={[Function]}
        tileHeight={50}
      >
        <div>
          <div
            style={
              Object {
                "height": 100,
                "overflow": "hidden",
                "position": "relative",
                "whiteSpace": "nowrap",
              }
            }
          >
            <ListComponent
              componentCache={[Function]}
              endTile={7}
              startTile={1}
              tileComponent={[Function]}
            >
              <div>
                <Label
                  index={1}
                  key="1"
                >
                  <div
                    style={
                      Object {
                        "height": 50,
                      }
                    }
                  >
                    sequence 2
                  </div>
                </Label>
                <Label
                  index={2}
                  key="2"
                >
                  <div
                    style={
                      Object {
                        "height": 50,
                      }
                    }
                  >
                    sequence 3
                  </div>
                </Label>
                <Label
                  index={3}
                  key="3"
                >
                  <div
                    style={
                      Object {
                        "height": 50,
                      }
                    }
                  >
                    sequence 4
                  </div>
                </Label>
                <Label
                  index={4}
                  key="4"
                >
                  <div
                    style={
                      Object {
                        "height": 50,
                      }
                    }
                  >
                    sequence 5
                  </div>
                </Label>
                <Label
                  index={5}
                  key="5"
                >
                  <div
                    style={
                      Object {
                        "height": 50,
                      }
                    }
                  >
                    sequence 6
                  </div>
                </Label>
                <Label
                  index={6}
                  key="6"
                >
                  <div
                    style={
                      Object {
                        "height": 50,
                      }
                    }
                  >
                    sequence 7
                  </div>
                </Label>
              </div>
            </ListComponent>
          </div>
        </div>
      </YBarComponent>
    </withPosition(YBarComponent)>
  </HTMLLabelsComponent>
</FakePositionStore>
`;

exports[`renders properly with a moved viewport (provider version) 2`] = `
Object {
  "position": Object {
    "currentViewSequence": 6,
    "currentViewSequencePosition": 0,
    "lastCurrentViewSequence": 6,
    "lastStartYTile": 4,
    "xPos": 0,
    "xPosOffset": 0,
    "yPos": 0,
    "yPosOffset": -20,
  },
}
`;

exports[`renders properly with a moved viewport (provider version) 3`] = `
<FakePositionStore
  currentViewSequence={6}
  currentViewSequencePosition={0}
  position={
    Object {
      "xPos": 0,
      "yPos": 0,
    }
  }
  subscribe={[Function]}
  xPosOffset={0}
  yPosOffset={-20}
>
  <HTMLLabelsComponent
    cacheElements={2}
    height={100}
    labelStyle={Object {}}
    nrYTiles={7}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileHeight={50}
  >
    <withPosition(YBarComponent)
      cacheElements={2}
      componentCache={[Function]}
      height={100}
      nrYTiles={7}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={50}
    >
      <YBarComponent
        cacheElements={2}
        componentCache={[Function]}
        height={100}
        nrYTiles={7}
        position={
          Object {
            "currentViewSequence": 6,
            "currentViewSequencePosition": 0,
            "lastCurrentViewSequence": 6,
            "lastStartYTile": 4,
            "xPos": 0,
            "xPosOffset": 0,
            "yPos": 0,
            "yPosOffset": -20,
          }
        }
        positionDispatch={[Function]}
        sequences={
          Array [
            Object {
              "name": "sequence 1",
              "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
            },
            Object {
              "name": "sequence 2",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 3",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 4",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 5",
              "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 6",
              "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 7",
              "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
            },
          ]
        }
        tileComponent={[Function]}
        tileHeight={50}
      >
        <div>
          <div
            style={
              Object {
                "height": 100,
                "overflow": "hidden",
                "position": "relative",
                "whiteSpace": "nowrap",
              }
            }
          >
            <ListComponent
              componentCache={[Function]}
              endTile={7}
              startTile={4}
              tileComponent={[Function]}
            >
              <div>
                <Label
                  index={4}
                  key="4"
                >
                  <div
                    style={
                      Object {
                        "height": 50,
                      }
                    }
                  >
                    sequence 5
                  </div>
                </Label>
                <Label
                  index={5}
                  key="5"
                >
                  <div
                    style={
                      Object {
                        "height": 50,
                      }
                    }
                  >
                    sequence 6
                  </div>
                </Label>
                <Label
                  index={6}
                  key="6"
                >
                  <div
                    style={
                      Object {
                        "height": 50,
                      }
                    }
                  >
                    sequence 7
                  </div>
                </Label>
              </div>
            </ListComponent>
          </div>
        </div>
      </YBarComponent>
    </withPosition(YBarComponent)>
  </HTMLLabelsComponent>
</FakePositionStore>
`;

exports[`renders properly with a moved viewport 1`] = `
<FakePositionStore
  currentViewSequence={3}
  currentViewSequencePosition={0}
  position={
    Object {
      "xPos": 0,
      "yPos": 0,
    }
  }
  subscribe={[Function]}
  xPosOffset={0}
  yPosOffset={0}
>
  <HTMLLabelsComponent
    cacheElements={10}
    height={400}
    labelStyle={Object {}}
    nrYTiles={10}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileHeight={40}
  >
    <withPosition(YBarComponent)
      cacheElements={10}
      componentCache={[Function]}
      height={400}
      nrYTiles={10}
      sequences={
        Array [
          Object {
            "name": "sequence 1",
            "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
          },
          Object {
            "name": "sequence 2",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 3",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 4",
            "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 5",
            "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 6",
            "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
          },
          Object {
            "name": "sequence 7",
            "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
          },
        ]
      }
      tileComponent={[Function]}
      tileHeight={40}
    >
      <YBarComponent
        cacheElements={10}
        componentCache={[Function]}
        height={400}
        nrYTiles={10}
        position={
          Object {
            "currentViewSequence": 3,
            "currentViewSequencePosition": 0,
            "lastCurrentViewSequence": 3,
            "lastStartYTile": 0,
            "xPos": 0,
            "xPosOffset": 0,
            "yPos": 0,
            "yPosOffset": 0,
          }
        }
        positionDispatch={[Function]}
        sequences={
          Array [
            Object {
              "name": "sequence 1",
              "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
            },
            Object {
              "name": "sequence 2",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 3",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 4",
              "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 5",
              "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 6",
              "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
            },
            Object {
              "name": "sequence 7",
              "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
            },
          ]
        }
        tileComponent={[Function]}
        tileHeight={40}
      >
        <div>
          <div
            style={
              Object {
                "height": 400,
                "overflow": "hidden",
                "position": "relative",
                "whiteSpace": "nowrap",
              }
            }
          >
            <ListComponent
              componentCache={[Function]}
              endTile={7}
              startTile={0}
              tileComponent={[Function]}
            >
              <div>
                <Label
                  index={0}
                  key="0"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 1
                  </div>
                </Label>
                <Label
                  index={1}
                  key="1"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 2
                  </div>
                </Label>
                <Label
                  index={2}
                  key="2"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 3
                  </div>
                </Label>
                <Label
                  index={3}
                  key="3"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 4
                  </div>
                </Label>
                <Label
                  index={4}
                  key="4"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 5
                  </div>
                </Label>
                <Label
                  index={5}
                  key="5"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 6
                  </div>
                </Label>
                <Label
                  index={6}
                  key="6"
                >
                  <div
                    style={
                      Object {
                        "height": 40,
                      }
                    }
                  >
                    sequence 7
                  </div>
                </Label>
              </div>
            </ListComponent>
          </div>
        </div>
      </YBarComponent>
    </withPosition(YBarComponent)>
  </HTMLLabelsComponent>
</FakePositionStore>
`;

exports[`renders properly with a moved viewport 2`] = `
<YBarComponent
  cacheElements={1}
  componentCache={[Function]}
  height={100}
  nrYTiles={7}
  position={
    Object {
      "currentViewSequence": 5,
      "yPosOffset": 0,
    }
  }
  positionDispatch={[Function]}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileComponent={[Function]}
  tileHeight={50}
/>
`;

exports[`renders properly with a moved viewport 3`] = `
<withPosition(YBarComponent)
  cacheElements={1}
  componentCache={[Function]}
  height={100}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileComponent={[Function]}
  tileHeight={50}
>
  <YBarComponent
    cacheElements={1}
    componentCache={[Function]}
    height={100}
    nrYTiles={7}
    position={
      Object {
        "currentViewSequence": 2,
        "lastCurrentViewSequence": 2,
        "lastStartYTile": 1,
        "yPosOffset": 0,
      }
    }
    positionDispatch={[Function]}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileComponent={[Function]}
    tileHeight={50}
  >
    <div>
      <div
        style={
          Object {
            "height": 100,
            "overflow": "hidden",
            "position": "relative",
            "whiteSpace": "nowrap",
          }
        }
      >
        <ListComponent
          componentCache={[Function]}
          endTile={5}
          startTile={1}
          tileComponent={[Function]}
        >
          <div>
            <Label
              index={1}
              key="1"
            >
              <div
                style={
                  Object {
                    "height": 50,
                  }
                }
              >
                sequence 2
              </div>
            </Label>
            <Label
              index={2}
              key="2"
            >
              <div
                style={
                  Object {
                    "height": 50,
                  }
                }
              >
                sequence 3
              </div>
            </Label>
            <Label
              index={3}
              key="3"
            >
              <div
                style={
                  Object {
                    "height": 50,
                  }
                }
              >
                sequence 4
              </div>
            </Label>
            <Label
              index={4}
              key="4"
            >
              <div
                style={
                  Object {
                    "height": 50,
                  }
                }
              >
                sequence 5
              </div>
            </Label>
          </div>
        </ListComponent>
      </div>
    </div>
  </YBarComponent>
</withPosition(YBarComponent)>
`;

exports[`renders properly with a moved viewport 4`] = `
<withPosition(YBarComponent)
  cacheElements={1}
  componentCache={[Function]}
  height={100}
  nrYTiles={7}
  sequences={
    Array [
      Object {
        "name": "sequence 1",
        "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
      },
      Object {
        "name": "sequence 2",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 3",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 4",
        "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 5",
        "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 6",
        "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
      },
      Object {
        "name": "sequence 7",
        "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
      },
    ]
  }
  tileComponent={[Function]}
  tileHeight={50}
>
  <YBarComponent
    cacheElements={1}
    componentCache={[Function]}
    height={100}
    nrYTiles={7}
    position={
      Object {
        "currentViewSequence": 5,
        "lastCurrentViewSequence": 5,
        "lastStartYTile": 4,
        "yPosOffset": -20,
      }
    }
    positionDispatch={[Function]}
    sequences={
      Array [
        Object {
          "name": "sequence 1",
          "sequence": "MEEPQSDPSIEP-PLSQETFSDLWKLLPENNVLSPLPS-QA-VDDLMLSPDDLAQWLTED",
        },
        Object {
          "name": "sequence 2",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 3",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 4",
          "sequence": "MEEPQSDLSIEL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 5",
          "sequence": "MEEPQSD--IEL-PLSEETFSDLWWPLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 6",
          "sequence": "MEEPQEDLSSSL-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE-LFLSENVAGWLEDP",
        },
        Object {
          "name": "sequence 7",
          "sequence": "MEEPQ---SISE-PLSQETFSDLWKLLPPNNVLSTLPS-SDSIEE---LSENVAGWLEDP",
        },
      ]
    }
    tileComponent={[Function]}
    tileHeight={50}
  >
    <div>
      <div
        style={
          Object {
            "height": 100,
            "overflow": "hidden",
            "position": "relative",
            "whiteSpace": "nowrap",
          }
        }
      >
        <ListComponent
          componentCache={[Function]}
          endTile={7}
          startTile={4}
          tileComponent={[Function]}
        >
          <div>
            <Label
              index={4}
              key="4"
            >
              <div
                style={
                  Object {
                    "height": 50,
                  }
                }
              >
                sequence 5
              </div>
            </Label>
            <Label
              index={5}
              key="5"
            >
              <div
                style={
                  Object {
                    "height": 50,
                  }
                }
              >
                sequence 6
              </div>
            </Label>
            <Label
              index={6}
              key="6"
            >
              <div
                style={
                  Object {
                    "height": 50,
                  }
                }
              >
                sequence 7
              </div>
            </Label>
          </div>
        </ListComponent>
      </div>
    </div>
  </YBarComponent>
</withPosition(YBarComponent)>
`;
